trying to draw a triangle

--- a/src/graphics/CMakeLists.txt
+++ b/src/graphics/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_library(graphics glad.c graphics.cxx mysqrt.cxx window.cxx)
+add_library(graphics glad.c graphics.cxx mysqrt.cxx window.cxx geometry.cxx)
 target_include_directories(graphics PUBLIC "${PROJECT_SOURCE_DIR}/include")
